--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section class="hero">
         <div class="hero-text">
-            <h5>My First SitWeb</h5>
+            <h5>My First WebSite</h5>
             <h4>Lead Supercell</h4>
             <h1>JHRL</h1>
             <P>My name is Jhonatan Reyes, am engineer of system this is my first website <br> the site
